--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -14,12 +14,8 @@ http {
     access_log                  off;
     keepalive_timeout           3000;
 
-    upstream channels-backend {
-        server daphne-server:9002;
-    }
-
-    upstream http-server {
-        server gunicorn:9001;
+    upstream http-worker {
+        server http-worker:8000;
     }
 
     server {
@@ -28,5 +24,20 @@ http {
         index                   index.html;
         server_name             localhost;
         client_max_body_size    16m;
+
+        location /static/ {
+            alias /logui/static/;
+        }
+
+        location / {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+
+            if (!-f $request_filename) {
+                proxy_pass http://http-worker;
+            }
+        }
     }
 }
