--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,26 @@
 asgiref==3.3.1
+attrs==20.3.0
+autobahn==20.7.1
+Automat==20.2.0
+cffi==1.14.3
+channels==3.0.2
+constantly==15.1.0
+cryptography==3.2.1
+daphne==3.0.1
 Django==3.1.3
 gunicorn==20.0.4
+hyperlink==20.0.1
+idna==2.10
+incremental==17.5.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyHamcrest==2.0.2
+pyOpenSSL==19.1.0
 pytz==2020.4
+service-identity==18.1.0
+six==1.15.0
 sqlparse==0.4.1
+Twisted==20.3.0
+txaio==20.4.1
+zope.interface==5.2.0
