--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -18,6 +18,10 @@ http {
         server http-worker:8000;
     }
 
+    upstream websocket-worker {
+        server websocket-worker:8000;
+    }
+
     server {
         listen                  8000;
         root                    /usr/share/nginx/html;
@@ -38,6 +42,19 @@ http {
             if (!-f $request_filename) {
                 proxy_pass http://http-worker;
             }
+        }
+
+        location /ws/ {
+            proxy_pass http://websocket-worker;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
         }
     }
 }
