Added database models, and database service.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ PROXY_LISTEN_ON=8000
 DOCKER_HOSTNAME=<<Hostname of your Docker host>>
 DEBUG=False
 SECRET_KEY=<<Secret key for Django (must be unique to your deployment)>>
+DATABASE_PASSWORD=<<Password for Postgres database>>
