--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,6 +54,19 @@ services:
     networks:
       - frontend
       - backend
+  
+  db:
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_DB=logui
+      - PGDATA=/logui/data/db
+    volumes:
+      - data:/logui/data
+    networks:
+      - backend
 
   # cache:
   #   networks:
