Added babel package to transform ECMAscript classes

--- a/worker/.babelrc
+++ b/worker/.babelrc
@@ -10,6 +10,12 @@
             {
                 "loose": true
             }
+        ],
+        [
+            "@babel/plugin-transform-classes",
+            {
+                "loose": true
+            }
         ]
     ]
 }
