--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -11,6 +11,9 @@ daphne==3.0.1
 Django==3.1.3
 django-appconf==1.0.4
 django-compressor==2.4
+django-cors-headers==3.7.0
+djangorestframework==3.12.2
+djangorestframework-jwt==1.11.0
 gunicorn==20.0.4
 hyperlink==20.0.1
 idna==2.10
@@ -21,6 +24,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
+PyJWT==1.7.1
 pyOpenSSL==19.1.0
 pytz==2020.4
 rcssmin==1.0.6
