--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -26,6 +26,7 @@ pycparser==2.20
 PyHamcrest==2.0.2
 PyJWT==1.7.1
 pyOpenSSL==19.1.0
+python-dateutil==2.8.1
 pytz==2020.4
 rcssmin==1.0.6
 rjsmin==1.1.0
