Added mongo code to save events to a collection

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -25,6 +25,7 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
 PyJWT==1.7.1
+pymongo==3.11.3
 pyOpenSSL==19.1.0
 python-dateutil==2.8.1
 pytz==2020.4
