--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -29,6 +29,8 @@ http {
         server_name             localhost;
         client_max_body_size    16m;
 
+        error_page 502          /502.html;
+
         location /static/ {
             alias /logui/static/;
         }
