Updated scripts and environment setup

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PROXY_LISTEN_ON=8000
-DOCKER_HOSTNAME=<<Hostname of your Docker host>>
+DOCKER_HOSTNAME=<<HOSTNAME>>
 DEBUG=False
-SECRET_KEY=<<Secret key for Django (must be unique to your deployment)>>
-DATABASE_PASSWORD=<<Password for Postgres database>>
+SECRET_KEY=<<KEY>>
+DATABASE_PASSWORD=<<PASSWORD>>
