Overhauled error pages, made their implementation more consistent

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -29,7 +29,8 @@ http {
         server_name             localhost;
         client_max_body_size    16m;
 
-        error_page 502          /502.html;
+        error_page 404          /responses/404.html;
+        error_page 502          /responses/502.html;
 
         location /static/ {
             alias /logui/static/;
