Added 500 error handler on proxy.

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -28,8 +28,10 @@ http {
         index                   index.html;
         server_name             localhost;
         client_max_body_size    16m;
+        proxy_intercept_errors  on;
 
         error_page 404          /responses/404.html;
+        error_page 500          /responses/500.html;
         error_page 502          /responses/502.html;
 
         location /static/ {
