Updated worker dockerfile to uglify JS of control app. Added DEBUG=True to config as temporary measure while the JS compilation issue is resolved.

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -23,7 +23,7 @@ RUN apk add --update --no-cache \
         npm
 
 RUN mkdir -p /logui/worker/
-RUN npm install -g @babel/core @babel/cli browserify less
+RUN npm install -g @babel/core @babel/cli browserify less uglify-js
 
 COPY ./requirements/requirements.txt /logui/worker/requirements.txt
 RUN pip install -r /logui/worker/requirements.txt --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host=files.pythonhosted.org
