--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -35,7 +35,7 @@ http {
         error_page 502          /responses/502.html;
 
         location /static/ {
-            alias /logui/static/;
+            alias /logui/worker/static/;
         }
 
         location / {
